Spacing fix for search apprentice section header

--- a/src/SFA.DAS.EAS.Web/comt-assets/css/screen.css
+++ b/src/SFA.DAS.EAS.Web/comt-assets/css/screen.css
@@ -5393,6 +5393,10 @@ h2 .float-right {
   margin: 7px 0 15px 0;
 }
 
+#search-form legend {
+  margin-bottom: 0;
+}
+
 #search-form .heading-medium {
   margin-top: 0;
 }
